--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       body { background-color: #F6F6F6; margin: 0; padding: 40px 0; position: relative; }
       .wrap { max-width: 400px; padding: 0 20px; margin: 0 auto; }
 	  .rows {padding: 0;}
-      .row-label { font-size: 16px; width: 80px; }
+      .row-label { font-size: 18px; width: 80px; }
       .counter, .score, .total-score { font-size: 32px; }
       h1, label { text-indent: -99em; position: absolute; width: 0; height: 0; }
       button { background: none; width: 50px; height: 50px; font-size: 24px; border: none; cursor: pointer; line-height: 38px; }
@@ -22,7 +22,7 @@
       .total-scores { cursor: pointer; display: flex; flex-direction: row; align-items: center; justify-content: space-between; }
 	  .total-scores .row-label {visibility: hidden;}
 	  .total-score { width: 140px; text-align: center;}
-	  input[type="number"] {width: 40px; line-height: 40px; padding: 0; border: 1px solid #333; text-align: center; -moz-appearance: none; font-size: 18px;}
+	  input[type="number"] {width: 40px; line-height: 40px; padding: 0; border: 1px solid #333; text-align: center; -moz-appearance: textfield; font-size: 18px;}
 	  input[type="number"]::-webkit-outer-spin-button,input[type="number"]::-webkit-inner-spin-button {-webkit-appearance: none; margin: none}
     </style>
   </head>
