--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       body { background-color: #F6F6F6; margin: 0; padding: 40px 0; position: relative; }
       .wrap { max-width: 400px; padding: 0 20px; margin: 0 auto; }
 	  .rows {padding: 0;}
-      .row-label { font-size: 18px; width: 80px; }
+      .row-label { font-size: 16px; width: 80px; }
       .counter, .score, .total-score { font-size: 32px; }
       h1, label { text-indent: -99em; position: absolute; width: 0; height: 0; }
       button { background: none; width: 50px; height: 50px; font-size: 24px; border: none; cursor: pointer; line-height: 38px; }
@@ -22,8 +22,7 @@
       .total-scores { cursor: pointer; display: flex; flex-direction: row; align-items: center; justify-content: space-between; }
 	  .total-scores .row-label {visibility: hidden;}
 	  .total-score { width: 140px; text-align: center;}
-	  input[type="number"] {width: 40px; line-height: 40px; padding: 0; border: 1px solid #333; text-align: center; -moz-appearance: textfield; font-size: 18px;}
-	  input[type="number"]::-webkit-outer-spin-button,input[type="number"]::-webkit-inner-spin-button {-webkit-appearance: none; margin: none}
+	  input[type="text"] {width: 40px; line-height: 40px; padding: 0; border: 1px solid #333; text-align: center; font-size: 18px;}
     </style>
   </head>
 
@@ -37,13 +36,13 @@
         <div class="counter">
 		  <label for="player-1-blue">Player 1</label>
           <button class="js-decrement" data-row="1" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-blue" type="number" class="js-score" data-row="1" data-player="1" value="0" min="0" tabindex="1" />
+          <input id="player-1-blue" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="1" data-player="1" value="0" min="0" tabindex="1" />
           <button class="js-increment" data-row="1" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-blue">Player 2</label>
           <button class="js-decrement" data-row="1" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-blue" type="number" class="js-score" data-row="1" data-player="2" value="0" min="0" tabindex="10" />
+          <input id="player-2-blue" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="1" data-player="2" value="0" min="0" tabindex="10" />
           <button class="js-increment" data-row="1" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
@@ -52,13 +51,13 @@
         <div class="counter">
 		  <label for="player-1-green">Player 1</label>
           <button class="js-decrement" data-row="2" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-green" type="number" class="js-score" data-row="2" data-player="1" value="0" min="0" tabindex="2" />
+          <input id="player-1-green" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="2" data-player="1" value="0" min="0" tabindex="2" />
           <button class="js-increment" data-row="2" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-green">Player 2</label>
           <button class="js-decrement" data-row="2" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-green" type="number" class="js-score" data-row="2" data-player="2" value="0" min="0" tabindex="11" />
+          <input id="player-2-green" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="2" data-player="2" value="0" min="0" tabindex="11" />
           <button class="js-increment" data-row="2" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
@@ -67,13 +66,13 @@
         <div class="counter">
 		  <label for="player-1-yellow">Player 1</label>
           <button class="js-decrement" data-row="3" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-yellow" type="number" class="js-score" data-row="3" data-player="1" value="0" min="0" tabindex="3" />
+          <input id="player-1-yellow" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="3" data-player="1" value="0" min="0" tabindex="3" />
           <button class="js-increment" data-row="3" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-yellow">Player 1</label>
           <button class="js-decrement" data-row="3" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-yellow" type="number" class="js-score" data-row="3" data-player="2" value="0" min="0" tabindex="12" />
+          <input id="player-2-yellow" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="3" data-player="2" value="0" min="0" tabindex="12" />
           <button class="js-increment" data-row="3" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
@@ -82,13 +81,13 @@
         <div class="counter">
 		  <label for="player-1-purple">Player 1</label>
           <button class="js-decrement" data-row="4" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-purple" type="number" class="js-score" data-row="4" data-player="1" value="0" min="0" tabindex="4" />
+          <input id="player-1-purple" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="4" data-player="1" value="0" min="0" tabindex="4" />
           <button class="js-increment" data-row="4" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-purple">Player 2</label>
           <button class="js-decrement" data-row="4" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-purple" type="number" class="js-score" data-row="4" data-player="2" value="0" min="0" tabindex="13" />
+          <input id="player-2-purple" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="4" data-player="2" value="0" min="0" tabindex="13" />
           <button class="js-increment" data-row="4" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
@@ -97,13 +96,13 @@
         <div class="counter">
 		  <label for="player-1-wonders">Player 1</label>
           <button class="js-decrement" data-row="5" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-wonders" type="number" class="js-score" data-row="5" data-player="1" value="0" min="0" tabindex="5" />
+          <input id="player-1-wonders" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="5" data-player="1" value="0" min="0" tabindex="5" />
           <button class="js-increment" data-row="5" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-wonders">Player 2</label>
           <button class="js-decrement" data-row="5" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-wonders" type="number" class="js-score" data-row="5" data-player="2" value="0" min="0" tabindex="14" />
+          <input id="player-2-wonders" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="5" data-player="2" value="0" min="0" tabindex="14" />
           <button class="js-increment" data-row="5" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
@@ -112,13 +111,13 @@
         <div class="counter">
 		  <label for="player-1-science">Player 1</label>
           <button class="js-decrement" data-row="6" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-science" type="number" class="js-score" data-row="6" data-player="1" value="0" min="0" tabindex="6" />
+          <input id="player-1-science" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="6" data-player="1" value="0" min="0" tabindex="6" />
           <button class="js-increment" data-row="6" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-science">Player 2</label>
           <button class="js-decrement" data-row="6" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-science" type="number" class="js-score" data-row="6" data-player="2" value="0" min="0" tabindex="15" />
+          <input id="player-2-science" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="6" data-player="2" value="0" min="0" tabindex="15" />
           <button class="js-increment" data-row="6" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
@@ -127,28 +126,28 @@
         <div class="counter">
 		  <label for="player-1-military">Player 1</label>
           <button class="js-decrement" data-row="7" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-military" type="number" class="js-score" data-row="7" data-player="1" value="0" min="0" tabindex="7" />
+          <input id="player-1-military" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="7" data-player="1" value="0" min="0" tabindex="7" />
           <button class="js-increment" data-row="7" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-military">Player 2</label>
           <button class="js-decrement" data-row="7" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-military" type="number" class="js-score" data-row="7" data-player="2" value="0" min="0" tabindex="16" />
+          <input id="player-2-military" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="7" data-player="2" value="0" min="0" tabindex="16" />
           <button class="js-increment" data-row="7" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
       <li class="row">
-        <h2 class="row-label">Coins x3</h2>
+        <h2 class="row-label">Coins x 3</h2>
         <div class="counter">
 		  <label for="player-1-coins">Player 1</label>
           <button class="js-decrement" data-row="8" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-coins" type="number" class="js-score" data-row="8" data-player="1" value="0" min="0" tabindex="8" />
+          <input id="player-1-coins" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="8" data-player="1" value="0" min="0" tabindex="8" />
           <button class="js-increment" data-row="8" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-coins">Player 2</label>
           <button class="js-decrement" data-row="8" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-coins" type="number" class="js-score" data-row="8" data-player="2" value="0" min="0" tabindex="17" />
+          <input id="player-2-coins" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="8" data-player="2" value="0" min="0" tabindex="17" />
           <button class="js-increment" data-row="8" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
@@ -157,13 +156,13 @@
         <div class="counter">
 		  <label for="player-1-divinities">Player 1</label>
           <button class="js-decrement" data-row="9" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-divinities" type="number" class="js-score" data-row="9" data-player="1" value="0" min="0" tabindex="9" />
+          <input id="player-1-divinities" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="9" data-player="1" value="0" min="0" tabindex="9" />
           <button class="js-increment" data-row="9" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-divinities">Player 2</label>
           <button class="js-decrement" data-row="9" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-divinities" type="number" class="js-score" data-row="9" data-player="2" value="0" min="0" tabindex="18" />
+          <input id="player-2-divinities" type="text" inputmode="numeric" pattern="[0-9]*" class="js-score" data-row="9" data-player="2" value="0" min="0" tabindex="18" />
           <button class="js-increment" data-row="9" data-player="2" tabindex="-1">+</button>
         </div>
 	  </li>
@@ -176,6 +175,8 @@
     </div>
 
     <script>
+
+const elemScores = document.querySelectorAll(".js-score");
 
 const elemScoresPlayer1 = document.querySelectorAll(".js-score[data-player='1']");
 const elemTotalScorePlayer1 = document.querySelector('.js-total-score-player-1');
@@ -198,10 +199,18 @@ function updateRowScore(row, player, direction) {
   updateTotalScore();
 }
 
+// Select all on input focus score
+elemScores.forEach((elemScore) => {
+  elemScore.addEventListener('focus', function(e) {
+	elemScore.select();
+  });
+});
+
 // Increment score
 elemIncrements.forEach((elemIncrement) => {
   elemIncrement.addEventListener('click', function(e) {
 	updateRowScore(elemIncrement.dataset.row, elemIncrement.dataset.player, 'increment');
+	e.stopPropagation();
   });
 });
 
@@ -209,6 +218,7 @@ elemIncrements.forEach((elemIncrement) => {
 elemDecrements.forEach((elemDecrement) => {
   elemDecrement.addEventListener('click', function(e) {
 	updateRowScore(elemDecrement.dataset.row, elemDecrement.dataset.player, 'decrement');
+	e.stopPropagation();
   });
 });
 
@@ -230,8 +240,12 @@ function updateTotalScore() {
 document.querySelector('.js-total-scores').addEventListener('click', function(e) {
   var result = window.confirm('Reset your score?');
   if (result == true) {
-    location.reload();
+    elemScores.forEach((elemScore) => {
+	  elemScore.value = 0;
+    });
+  	updateTotalScore();
   }
+  e.stopPropagation();
 });
     </script>
   </body>
