--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@ elemScores.forEach((elemScore) => {
     e.stopPropagation();
     return false;
   });
+  elemScore.addEventListener('contextmenu', (e) => {
+    e.preventDefault();
+  });
 });
 
 // Increment score
