--- a/index.html
+++ b/index.html
@@ -15,15 +15,42 @@
 	  .rows {padding: 0;}
       .row-label { font-size: 16px; width: 80px; }
       .counter, .score, .total-score { font-size: 32px; }
-      h1, label { text-indent: -99em; position: absolute; width: 0; height: 0; }
+      h1, .rows label { text-indent: -99em; position: absolute; width: 0; height: 0; }
       button { background: none; width: 50px; height: 50px; font-size: 24px; border: none; cursor: pointer; line-height: 38px; }
       .row { display: flex; flex-direction: row; align-items: center; justify-content: space-between; margin-bottom: 20px; }
       .counter { display: flex; flex-direction: row; align-items: center; justify-content: space-between; }
       .total-scores { cursor: pointer; display: flex; flex-direction: row; align-items: center; justify-content: space-between; }
 	  .total-scores .row-label {visibility: hidden;}
 	  .total-score { width: 140px; text-align: center;}
-	  input[type="number"] {width: 40px; line-height: 40px; padding: 0; border: 1px solid #333; text-align: center; -moz-appearance: textfield; font-size: 18px;}
-	  input[type="number"]::-webkit-outer-spin-button,input[type="number"]::-webkit-inner-spin-button {-webkit-appearance: none; margin: none}
+	  input[type="number"] { width: 40px; line-height: 40px; padding: 0; border: 1px solid #333; text-align: center; -moz-appearance: textfield; font-size: 18px; }
+	  input[type="number"]::-webkit-outer-spin-button,input[type="number"]::-webkit-inner-spin-button { -webkit-appearance: none; margin: none; }
+.game-version { border: 0; padding: 0; }
+.game-version legend { position: absolute; top: -999px; }
+.game-version ul { position: relative; display: block; list-style: none; padding: 0; display: flex; flex-direction: row; align-items: center; justify-content: space-evenly; }
+.game-version label {
+    display: block;
+    background: #DDD;
+    color: #000;
+    border-radius: 5px;
+    padding: 10px 30px;
+    margin-bottom: 5px;
+    cursor: pointer;
+	transition: .3s background;
+}
+input[type="radio"] {
+    opacity: 0;
+    position: absolute;
+}
+input[type="radio"]:checked + label {
+    background: #FFF;
+}
+input[type="radio"]:checked + label:after {
+ background: $accentcolor;
+}
+input[type="radio"]:checked + label:before {
+    width: 20px;
+    height: 20px;
+}
     </style>
   </head>
 
@@ -31,9 +58,36 @@
     <div class="wrap">
     <h1>7 Wonders Duel (Pantheon) score calculator</h1>
 
+<fieldset class="game-version">
+<legend>Game version</legend>
+<ul>
+  <li>
+    <input type="radio" name="game-type" id="core" value="core" class="js-game-type" checked>
+    <label for="core">Core</label>
+  </li>
+  <li>
+    <input type="radio" name="game-type" id="pantheon" value="pantheon" class="js-game-type">
+    <label for="pantheon">Pantheon</label>
+  </li><!--
+  <li>
+    <input type="radio" name="game-type" id="agora" value="agora" class="js-game-type">
+    <label for="agora">Agora</label>
+  </li>-->
+</ul>
+</fieldset>
+
     <ul class="rows">
-      <li class="row">
-        <h2 class="row-label">Blue</h2>
+      <li class="row js-row">
+        <h2 class="row-label"><svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+<title>Blue</title>
+<rect title="Blue" width="64" height="64" fill="white"/>
+<path d="M18 45.8801C18.8064 40.0819 22.9509 35.3886 28.3714 33.917C29.4842 34.598 30.7224 35 32.0272 35C33.3244 35 34.5559 34.6027 35.6637 33.9288C41.081 35.4183 45.2152 40.1284 46 45.9377C42.4599 49.6769 37.5078 52 32.0272 52C26.5184 52 21.5437 49.6531 18 45.8801Z" fill="#7878FF"/>
+<path d="M38.8462 24.8478C38.8462 28.6298 35.7932 33 32.0272 33C28.2611 33 25.2082 28.6298 25.2082 24.8478C25.2082 21.0659 28.2611 18 32.0272 18C35.7932 18 38.8462 21.0659 38.8462 24.8478Z" fill="#7878FF"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M32 50C41.9411 50 50 41.9411 50 32C50 22.0589 41.9411 14 32 14C22.0589 14 14 22.0589 14 32C14 41.9411 22.0589 50 32 50ZM32 52C43.0457 52 52 43.0457 52 32C52 20.9543 43.0457 12 32 12C20.9543 12 12 20.9543 12 32C12 43.0457 20.9543 52 32 52Z" fill="#271E2C"/>
+<circle cx="46" cy="46" r="9" fill="#271E2C"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M41.709 46.916L42.4161 46.2089L44.875 48.6679L50.1465 43.3964L50.8536 44.1035L44.875 50.0821L41.709 46.916Z" fill="#F9F8F9"/>
+</svg>
+</h2>
         <div class="counter">
 		  <label for="player-1-blue">Player 1</label>
           <button class="js-decrement" data-row="1" data-player="1" tabindex="-1">&ndash;</button>
@@ -47,7 +101,7 @@
           <button class="js-increment" data-row="1" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
-      <li class="row">
+      <li class="row js-row">
         <h2 class="row-label">Green</h2>
         <div class="counter">
 		  <label for="player-1-green">Player 1</label>
@@ -62,7 +116,7 @@
           <button class="js-increment" data-row="2" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
-      <li class="row">
+      <li class="row js-row">
         <h2 class="row-label">Yellow</h2>
         <div class="counter">
 		  <label for="player-1-yellow">Player 1</label>
@@ -77,7 +131,7 @@
           <button class="js-increment" data-row="3" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
-      <li class="row">
+      <li class="row js-row">
         <h2 class="row-label">Purple</h2>
         <div class="counter">
 		  <label for="player-1-purple">Player 1</label>
@@ -92,7 +146,7 @@
           <button class="js-increment" data-row="4" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
-      <li class="row">
+      <li class="row js-row">
         <h2 class="row-label">Wonders</h2>
         <div class="counter">
 		  <label for="player-1-wonders">Player 1</label>
@@ -107,7 +161,7 @@
           <button class="js-increment" data-row="5" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
-      <li class="row">
+      <li class="row js-row">
         <h2 class="row-label">Science</h2>
         <div class="counter">
 		  <label for="player-1-science">Player 1</label>
@@ -122,7 +176,7 @@
           <button class="js-increment" data-row="6" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
-      <li class="row">
+      <li class="row js-row">
         <h2 class="row-label">Military</h2>
         <div class="counter">
 		  <label for="player-1-military">Player 1</label>
@@ -137,7 +191,7 @@
           <button class="js-increment" data-row="7" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
-      <li class="row">
+      <li class="row js-row">
         <h2 class="row-label">Coins x 3</h2>
         <div class="counter">
 		  <label for="player-1-coins">Player 1</label>
@@ -152,18 +206,18 @@
           <button class="js-increment" data-row="8" data-player="2" tabindex="-1">+</button>
         </div>
       </li>
-      <li class="row">
+      <li class="row js-row" data-expansion="pantheon">
         <h2 class="row-label">Divinities</h2>
         <div class="counter">
 		  <label for="player-1-divinities">Player 1</label>
           <button class="js-decrement" data-row="9" data-player="1" tabindex="-1">&ndash;</button>
-          <input id="player-1-divinities" type="number" min="0" class="js-score" data-row="9" data-player="1" value="0" tabindex="9" />
+          <input id="player-1-divinities" type="number" min="0" class="js-score" data-row="9" data-player="1" data-expansion="pantheon" value="0" tabindex="9" />
           <button class="js-increment" data-row="9" data-player="1" tabindex="-1">+</button>
         </div>
         <div class="counter">
 		  <label for="player-2-divinities">Player 2</label>
           <button class="js-decrement" data-row="9" data-player="2" tabindex="-1">&ndash;</button>
-          <input id="player-2-divinities" type="number" min="0" class="js-score" data-row="9" data-player="2" value="0" tabindex="18" />
+          <input id="player-2-divinities" type="number" min="0" class="js-score" data-row="9" data-player="2" data-expansion="pantheon" value="0" tabindex="18" />
           <button class="js-increment" data-row="9" data-player="2" tabindex="-1">+</button>
         </div>
 	  </li>
@@ -176,6 +230,8 @@
     </div>
 
     <script>
+
+const gameTypes = document.querySelectorAll(".js-game-type");
 
 const elemScores = document.querySelectorAll(".js-score");
 
@@ -192,8 +248,26 @@ document.oncontextmenu = function() {
   return false;
 }
 
+gameTypes.forEach((gameType) => {
+  gameType.addEventListener('change', (e) => {
+    document.querySelectorAll(".js-score[data-expansion]").forEach((elemScore) => {
+  	  elemScore.value = 0;
+    });
+	document.querySelectorAll(".js-row[data-expansion]").forEach((row) => {
+  	  row.style.display = "none";
+    });
+	document.querySelectorAll(".js-row[data-expansion='" + e.target.value + "']").forEach((row) => {
+  	  row.style.display = "flex";
+    });
+    updateTotalScore();
+  });
+});
+
 elemScores.forEach((elemScore) => {
   elemScore.addEventListener('change', (e) => {
+    if (!elemScore.value) {
+      elemScore.value = 0;
+    }
     updateTotalScore();
   });
 });
