--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@ input[type="radio"]:checked + label:after {
         width: fit-content;
         padding: 3px;
       }
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
     }
     </style>
   </head>
