--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>7 Wonders Duel (Pantheon) score calculator</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta name="description" content="A score calculator for the card game 7 Wonders Duel, with optional Pantheon expansion">
 		<link rel="shortcut icon" href="/images/favicon.ico">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
