--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			input[type="radio"] { opacity: 0; position: absolute; }
 			.game-version li input[type="radio"]:checked + label { border: 1px solid #333; background: #EEE; color: #333; }
 			label { -webkit-tap-highlight-color: rgba(0,0,0,0); }
+			.feedback { text-align: center; margin-top: 40px; }
 		</style>
 	</head>
 	<body>
@@ -199,6 +200,7 @@
 				<div class="total-score js-total-score-player-1">0</div>
 				<div class="total-score js-total-score-player-2">0</div>
 			</div>
+			<p class="feedback"><a href="https://ronansprake.co.uk/board-game-score-calculators/" target="_blank">Could this be better? Send me feedback</a></p>
 		</div>
 		<script>
 			const gameTypes = document.querySelectorAll(".js-game-type");
