--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			input[type="radio"] { opacity: 0; position: absolute; }
 			.game-version li input[type="radio"]:checked + label { border: 1px solid #333; background: #EEE; color: #333; }
 			label { -webkit-tap-highlight-color: rgba(0,0,0,0); }
-			.feedback { text-align: center; margin-top: 40px; }
+			.feedback { margin-top: 40px; text-align: center; }
+			.feedback a { color: #999; }
 		</style>
 	</head>
 	<body>
