--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			input[type="radio"] { opacity: 0; position: absolute; }
 			.game-version li input[type="radio"]:checked + label { border: 1px solid #333; background: #EEE; color: #333; }
 			label { -webkit-tap-highlight-color: rgba(0,0,0,0); }
-			.feedback { margin-top: 60px; text-align: center; font-size: 14px; }
+			.feedback { margin: 40px 0 0; text-align: center; font-size: 14px; }
 			.feedback a { color: #999; }
 		</style>
 	</head>
