--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				<div class="total-score js-total-score-player-1">0</div>
 				<div class="total-score js-total-score-player-2">0</div>
 			</div>
-			<p class="feedback"><a href="https://ronansprake.co.uk/board-game-score-calculators#feedback" target="_blank">Could this be better? Send me feedback</a></p>
+			<p class="feedback"><a href="https://ronansprake.co.uk/board-game-score-calculators#contact" target="_blank">Could this be better? Send me feedback</a></p>
 		</div>
 		<script>
 			const gameTypes = document.querySelectorAll(".js-game-type");
