--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</script>
 		<!-- End Google Analytics -->
 		<style>
-			* { font-family: 'Open Sans', sans-serif; font-weight: 600; color: #444B53; box-sizing: border-box; }
+			* { font-family: 'Open Sans', sans-serif; font-weight: 600; color: #444B53; box-sizing: border-box; touch-action: manipulation; }
 			body { background-color: #F6F6F6; margin: 0; padding: 40px 0; position: relative; }
 			.wrap { max-width: 400px; padding: 0 20px; margin: 0 auto; }
 			.rows {padding: 0;}
